--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon --inspect index.js"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mongodb": "^3.0.5"
   },
   "devDependencies": {
     "nodemon": "^1.17.2"
